deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ebic
  template:
    metadata:
      labels:
        app: ebic
    spec:
      volumes:
        - name: dls
          hostPath:
            path: /dls
            type: Directory
      containers:
        - name: api
          image: gcr.io/diamond-pubreg/em/ebic-api:0.0.1
          ports:
            - containerPort: 8000
              name: api
          resources:
            limits:
              cpu: "1"
              memory: 1G
          volumeMounts:
            - mountPath: /dls
              name: dls
              mountPropagation: HostToContainer
        - name: frontend
          image: gcr.io/diamond-pubreg/em/ebic-frontend:0.0.1-oidc
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: "1"
              memory: 1G
---
apiVersion: v1
kind: Service
metadata:
  name: ebic-svc
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: api
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: ebic
  type: LoadBalancer
  externalTrafficPolicy: Cluster
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebic-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ebic-staging.diamond.ac.uk
  rules:
  - host: ebic-staging.diamond.ac.uk
    http:
      paths:
      - path: /(?!api).*
        pathType: Prefix
        backend:
          service:
            name: ebic-svc
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebic-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ebic-staging.diamond.ac.uk
  rules:
  - host: ebic-staging.diamond.ac.uk
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: ebic-svc
            port:
              number: 8000
---
